--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,21 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<!DOCTYPEHTML>
+<html>
+  <head>
+    <style type="text/css">
+      .turbolinks-progress-bar{
+        position: flex;
+        display: block:
+        top: 0;
+        left: 0;
+        height: 3px;
+        background: #0076ff;
+        z-index: 9999;
+        transition: width 300ms ease-out, opacity 150ms ease-in;
+        transform: translate3d(0,0,0);
+      }
+    </style>
+  </head>
+</html>
+
+
+
