--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -76,24 +76,26 @@
   </tbody>
 </table>
 
-
 <h2>New book</h2>
 <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="QBQI0wEJm5OhubSlDnS8tjzUXsYtDBXKjWafjDSBl5dKh3LIzJ1JvYKp7x9ca3Kzb8w1uwRxu5LLEFTgCCx27Q==" />
 
   <div class="field">
+  <%= form_with model: @book,url: '/books' method: :post do |f| %>
     <label for="book_title">Title</label>
-    <input class="book_title" type="text" name="book[title]" id="book_title" />
+    <%= f.text_field :title %>
   </div>
 
   <div class="field">
     <label for="book_body">Body</label>
-    <textarea class="book_body" name="book[body]" id="book_body">
+    <%= f.text_area :body %>
 </textarea>
   </div>
 
   <div class="actions">
-    <input type="submit" name="commit" value="Create Book" data-disable-with="Create Book" />
+    <%= f.submit 'Create Book' %>
+    <% end %>
   </div>
 </form>
+
   </body>
 </html>
