--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+ <body>
+    <h1>Editing Book</h1>
+
+<form class="edit_book" id="edit_book_69978" action="/books/69978" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="_method" value="patch" /><input type="hidden" name="authenticity_token" value="0x0GpCpgxLzhAVUkdXNFJnm2z0YL4oN2PMsByRDquXQKLEnD0uckEG+Ys8f54VR8A9TfxolfRQfdM+AAlClKXw==" />
+
+  <div class="field">
+    <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+    <label for="book_title">Title</label>
+    <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
+    <label for="book_body">Body</label>
+    <%= f.text_area :body %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit 'Update Book' %>
+  </div>
+    <% end %>
+</form>
+
+    <%= link_to 'Show', book_path(@book.id) %>
+    <%= link_to 'Back', '/books' %>
+
+  </body>
