--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -27,25 +27,21 @@
 </table>
 
 <h2>New book</h2>
-<form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="QBQI0wEJm5OhubSlDnS8tjzUXsYtDBXKjWafjDSBl5dKh3LIzJ1JvYKp7x9ca3Kzb8w1uwRxu5LLEFTgCCx27Q==" />
 
-  <div class="field">
-  <%= form_with model: @book, url: 'books', method: :post do |f| %>
+  <div class="box">
+  <%= form_with model: @book, url: '/books', method: :post do |f| %>
     <label for="book_title">Title</label>
     <%= f.text_field :title %>
   </div>
 
-  <div class="field">
+  <div class="box">
     <label for="book_body">Body</label>
     <%= f.text_area :body %>
-</textarea>
   </div>
 
-  <div class="actions">
+  <div class="box">
     <%= f.submit 'Create Book' %>
     <% end %>
   </div>
-</form>
 
   </body>
-</html>
