--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,24 +1,29 @@
- <body>
-    <h1>Editing Book</h1>
+<body>
+<h1>Editing Book</h1>
+<% if @book.errors.any? %>
+   <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-
+  <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
   <div class="box">
-    <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
     <label for="book_title">Title</label>
-    <%= f.text_field :title %>
   </div>
+  <%= f.text_field :title %>
 
   <div class="box">
     <label for="book_body">Body</label>
-    <%= f.text_area :body %>
   </div>
+  <%= f.text_area :body %>
 
   <div class="box">
     <%= f.submit 'Update Book' %>
   </div>
     <% end %>
-
-    <%= link_to 'Show', book_path(@book.id) %>
-    <%= link_to 'Back', '/books' %>
-
-  </body>
+  <%= link_to 'Show', book_path(@book.id) %>
+  <%= link_to 'Back', '/books' %>
+</body>
