--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 
-  <body>
-    <p id="notice"></p>
+<body>
+  <p></p>
 
 <h1>Books</h1>
 
@@ -28,20 +28,29 @@
 
 <h2>New book</h2>
 
-  <div class="box">
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
   <%= form_with model: @book, url: '/books', method: :post do |f| %>
+  <div class="box">
     <label for="book_title">Title</label>
-    <%= f.text_field :title %>
   </div>
+    <%= f.text_field :title %>
 
   <div class="box">
     <label for="book_body">Body</label>
-    <%= f.text_area :body %>
   </div>
+    <%= f.text_area :body %>
 
   <div class="box">
     <%= f.submit 'Create Book' %>
-    <% end %>
   </div>
+    <% end %>
 
-  </body>
+</body>
