--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,8 @@
 <body>
 <h1>Editing Book</h1>
+
 <% if @book.errors.any? %>
-   <%= @book.errors.count %>errors prohibited this book from being saved:
+   <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -12,13 +13,13 @@
   <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
   <div class="box">
     <label for="book_title">Title</label>
-  </div>
   <%= f.text_field :title %>
+  </div>
 
   <div class="box">
     <label for="book_body">Body</label>
-  </div>
   <%= f.text_area :body %>
+  </div>
 
   <div class="box">
     <%= f.submit 'Update Book' %>
